# ParallelGaussSolver-CUDA-and-MPI-

./: CMakeLists.txt  functions.h  main.cu  readme.md
MPI/: GaussMain.cpp  Makefile.mk  functions.h
MatrixUtils/: Matrix.h
python/: testing_script.py
